﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1307: Update preset and translations, improve preset matching by support match="keyvalue" and the rest of the possible values for fixed keys.

1306: Update preset, update translations, fix issue which caused node icons to vanish when copy/pasting tags between nodes and areas.

1305: Update preset.

1304: Update preset, fix UI glitch when applying presets.

1303: Update OpeningHoursFragment, presets, imagery and translations.

1302: Don't dismiss SearchForm except if a result has been chosen. update OpeningHoursFragment, show an error toast when preset creation fails, fix issue with Node creation when a filter is applied, any xmas:feature to important tags :-), fix regression when matching addr: tags, update preset, update translations.

1301: Fix issue with previous tile caches that are not writable, fix logic for permission requests, various stability issue fixes, inherit level status from relations properly in indoor mode, change spinner message when downloading, updated translations. 

1300: Update OpeningHoursFragment (fixes numerous smaller issues), update presets and translations, avoid a serialisation crash, improve note conflict handling.

1299: Update OpeningHoursFragment, don't produce crash dump when deleting tiles when tile database is already closed.

1298: Update OpeningHoursFragment, more fixes to OAuth UI code.

1297: Explicitly add utility preset items to MRU (regression), update presets and imagery.

1296: Updated preset, update imagery, bump version number.

1295: Updated imagery, OpeningHoursFragment, bump build number and change to release.

1294: Fix relation version number corruption, inconsistent backlinks after conflict resolution, updated presets and name suggestion index. Bump android version number.

1293: Fix various photo display related issues, update documentation and translations.
