@@ -1,0 +1,28 @@
+# Vespucci 0.9.10 BETA Highlights
+ 
+## Configurable validator
+ 
+The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for resurveying introduced in 0.9.9 is now fully configurable.
+
+The missing tag check works on the combination of the configured keys that should be checked and the preset for element.
+
+Example: the default configuration checks that a "name" tag is present on a object if the matching preset contains a "name" field in the non-optional tags, optionally the check can be extended to "optional" tags.
+
+## C-Mode
+
+In C-Mode only objects that have warnings are displayed, making it simple to find objects with missing tags and other potential problems. Starting the property editor for an object in C-Mode will automatically apply the best match presets.
+
+Currently C-Mode is accessed by cycling through the modes via long press on the "Lock" button. This will likely be replaced by an alternative mechanism for release.
+
+## Miscellaneous 
+
+The full change log is available [here](https://github.com/MarcusWolschon/osmeditor4android/commits/master)
+
+# Known problems
+ 
+
+# Upgrading from previous versions
+
+* The saved editing state file format has changed, please complete any edits before upgrading.
+* For known problems with the beta build please see [our issue tracker](https://github.com/MarcusWolschon/osmeditor4android/issues)
+
