@@ -1,0 +1,14 @@
+<?xml version='1.0' encoding='utf-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+</head>
+<body>
+<h1>Vespucci 0.9.10 BETA Highlights</h1><h2>Configurable validator</h2><p>The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for resurveying introduced in 0.9.9 is now fully configurable.</p><p>The missing tag check works on the combination of the configured keys that should be checked and the preset for element.</p><p>Example: the default configuration checks that a "name" tag is present on a object if the matching preset contains a "name" field in the non-optional tags, optionally the check can be extended to "optional" tags.</p><h2>C-Mode</h2><p>In C-Mode only objects that have warnings are displayed, making it simple to find objects with missing tags and other potential problems. Starting the property editor for an object in C-Mode will automatically apply the best match presets.</p><p>Currently C-Mode is accessed by cycling through the modes via long press on the "Lock" button. This will likely be replaced by an alternative mechanism for release.</p><h2>Miscellaneous</h2><p>The full change log is available <a href="https://github.com/MarcusWolschon/osmeditor4android/commits/master">here</a></p><h1>Known problems</h1><h1>Upgrading from previous versions</h1>
+<ul>
+  <li>The saved editing state file format has changed, please complete any edits before upgrading.</li>
+  <li>For known problems with the beta build please see <a href="https://github.com/MarcusWolschon/osmeditor4android/issues">our issue tracker</a></li>
+</ul>
+</body>
+</html>
