@@ -12,6 +12,6 @@
   <li>*:left, *:right, *:left:*, *:right:*, left and right</li>
   <li>*:backward, *:forward, *:backward:*, *:forward:*, backward and forward</li>
   <li>forward and backward roles in relations the selected way is a member of</li>
-</ul><h3><img src="../images/tag_menu_split.png" alt="Split" /> Split</h3><p>Split the selected way. The nodes at the available locations for splitting will have a visible touch area. The "Split" action is only available if the way has more than two nodes. If the way is closed you will need to select two nodes.</p><h3><img src="../images/tag_menu_merge.png" alt="Merge" /> Merge</h3><p>Join the selected way with one that it shares a node with resulting in a single way. This option will only be available if the ways have compatible tags and relation memberships.</p><h3><img src="../images/tag_menu_append.png" alt="Append" /> Append</h3><p>Append to the current selected way. Touch areas will be visible around nodes that can be used to extend the way, select "Done" or the same node twice to stop. The "Append" action is only available if the way in question is not closed.</p><h3><img src="../images/no_left_turn_light.png" alt="TurnRestriction" /> Add turn restriction</h3><p>Start creating a turn restriction with this way as "from" member. This action is only available if the way in question has a "highway" tag. Ways will be split automatically during the process.</p><h3><img src="../images/menu_ortho.png" alt="Orthogonalize" /> Orthogonalize</h3><p>Change angles that are near 90° or 180° to 90° or 180° respectively.</p><h3><img src="../images/ic_menu_rotate.png" alt="Rotate" /> Rotate</h3><p>Rotate the way around its centroid. The centroid position is marked with a cross.</p><h3>Split in to polygons</h3><p>Available for closed ways with at least four nodes. Will split the way in to two polygons, sharing the common nodes.</p><h3><img src="../images/ic_menu_copy_holo_light.png" alt="Copy" /> Copy</h3><p>Copy the way to the internal copy and paste buffer.</p><h3><img src="../images/ic_menu_cut_holo_light.png" alt="Cut" /> Cut</h3><p>Move the way to the internal copy and paste buffer removing it from the data.</p><h3><img src="../images/tag_menu_delete.png" alt="Delete" /> Delete</h3><p>Remove the object from the data.</p><h3><img src="../images/extend_selection.png" alt="Extend" /> Extend selection</h3><p>Start Multi-Select mode with the current selected element.</p><h3><img src="../images/relation.png" alt="Relation" /> Create relation</h3><p>Create a relation and add this object as the first element. Further objects can be added until "Done" is selected, then the tag editor will be started on the new relation. </p><h3><img src="../images/tag_menu_mapfeatures.png" alt="Info" /> Info</h3><p>Show a screen with some detailed information on the selected object.</p><h3>Zoom to selection</h3><p>Pan and zoom the map to the currently selected object.</p><h3>Share position</h3><p>Share the position of the selected object with other apps on the device.</p><h3><img src="../images/menu_config.png" alt="Preferences" /> Preferences</h3><p>Show the user preference screens. The settings are split into two sets: the first screen contains the more commonly used preferences, the "Advanced preferences" contains the less used ones. </p><h3><img src="../images/menu_help.png" alt="Help" /> Help</h3><p>Start the Vespucci Help browser</p>
+</ul><h3><img src="../images/ic_content_cut_light_36px.png" alt="Split" /> Split</h3><p>Split the selected way. The nodes at the available locations for splitting will have a visible touch area. The "Split" action is only available if the way has more than two nodes. If the way is closed you will need to select two nodes.</p><h3><img src="../images/tag_menu_merge.png" alt="Merge" /> Merge</h3><p>Join the selected way with one that it shares a node with resulting in a single way. This option will only be available if the ways have compatible tags and relation memberships.</p><h3><img src="../images/tag_menu_append.png" alt="Append" /> Append</h3><p>Append to the current selected way. Touch areas will be visible around nodes that can be used to extend the way, select "Done" or the same node twice to stop. The "Append" action is only available if the way in question is not closed.</p><h3><img src="../images/no_left_turn_light.png" alt="TurnRestriction" /> Add turn restriction</h3><p>Start creating a turn restriction with this way as "from" member. This action is only available if the way in question has a "highway" tag. Ways will be split automatically during the process.</p><h3><img src="../images/menu_ortho.png" alt="Orthogonalize" /> Orthogonalize</h3><p>Change angles that are near 90° or 180° to 90° or 180° respectively.</p><h3><img src="../images/ic_menu_rotate.png" alt="Rotate" /> Rotate</h3><p>Rotate the way around its centroid. The centroid position is marked with a cross.</p><h3>Split in to polygons</h3><p>Available for closed ways with at least four nodes. Will split the way in to two polygons, sharing the common nodes.</p><h3><img src="../images/ic_menu_copy_holo_light.png" alt="Copy" /> Copy</h3><p>Copy the way to the internal copy and paste buffer.</p><h3><img src="../images/ic_menu_cut_holo_light.png" alt="Cut" /> Cut</h3><p>Move the way to the internal copy and paste buffer removing it from the data.</p><h3><img src="../images/tag_menu_delete.png" alt="Delete" /> Delete</h3><p>Remove the object from the data.</p><h3><img src="../images/extend_selection.png" alt="Extend" /> Extend selection</h3><p>Start Multi-Select mode with the current selected element.</p><h3><img src="../images/relation.png" alt="Relation" /> Create relation</h3><p>Create a relation and add this object as the first element. Further objects can be added until "Done" is selected, then the tag editor will be started on the new relation. </p><h3><img src="../images/tag_menu_mapfeatures.png" alt="Info" /> Info</h3><p>Show a screen with some detailed information on the selected object.</p><h3>Zoom to selection</h3><p>Pan and zoom the map to the currently selected object.</p><h3>Share position</h3><p>Share the position of the selected object with other apps on the device.</p><h3><img src="../images/menu_config.png" alt="Preferences" /> Preferences</h3><p>Show the user preference screens. The settings are split into two sets: the first screen contains the more commonly used preferences, the "Advanced preferences" contains the less used ones. </p><h3><img src="../images/menu_help.png" alt="Help" /> Help</h3><p>Start the Vespucci Help browser</p>
 </body>
 </html>
