@@ -23,7 +23,8 @@
     <string name="help_tagfilter">Tag filter</string>
     <string name="help_presetfilter">Preset filter</string>
     <string name="help_opening_hours">Opening hours</string>
-    <string name="help_upgrade">0.9.9 Release notes</string>
+    <string name="help_upgrade">0.9.10 Release notes</string>
+    <string name="help_upgrade_099">0.9.9 Release notes</string>
     <string name="help_upgrade_098">0.9.8 Release notes</string>
     <string name="help_upgrade_097">0.9.7 Release notes</string>
     <string name="help_upgrade_096">0.9.6 Release notes</string>
@@ -45,6 +46,7 @@
     	<item>@string/help_presetfilter</item>
     	<item>@string/help_opening_hours</item>
     	<item>@string/help_upgrade</item>
+    	<item>@string/help_upgrade_099</item>
     	<item>@string/help_upgrade_098</item>
     	<item>@string/help_upgrade_097</item>
     	<item>@string/help_upgrade_096</item>
@@ -67,6 +69,7 @@
     	<item>Tag filter</item>
     	<item>Preset filter</item>
     	<item>Opening hours</item>
+    	<item>0.9.10 Release notes</item>
     	<item>0.9.9 Release notes</item>
     	<item>0.9.8 Release notes</item>
     	<item>0.9.7 Release notes</item>
